set decimal chart numbers to fixed 1. Changed wrapping of profile header averages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,6 +116,7 @@ body {
 .card {
     
     padding-top: 5px;
+    padding-bottom: 5px;
     background-color: #242F39;
 }
 
